[package]
name = "IPv6PrefixFilter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
ctrlc = "3.4.5"
env_logger = "0.11.5"
ipnet = "2.10.1"
log = "0.4.22"
once_cell = "1.20.2"
pnet = "0.35.0"
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
thiserror = "2.0.3"


[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nfq = "0.2.5"
nftables = "0.5.0"


[target.'cfg(windows)'.dependencies]
windivert-sys = { version = "0.10.0", features = ["vendored"]}




[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"
